manifests/base/gcp/gateway/infra-main-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-main-route
  namespace: spirit-in-physics
spec:
  hostnames:
  - spirit-in-physics.com
  - sip.junkawasaki.com
  parentRefs:
  - name: infra-gateway
    namespace: spirit-in-physics
    sectionName: https-0
  rules:
  - backendRefs:
    - name: api
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /api
  - backendRefs:
    - name: importer
      port: 8082
    matches:
    - path:
        type: PathPrefix
        value: /import
  - backendRefs:
    - name: portal
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
